# DX12-Playground

./: .gitignore  README.md
DX12-Playground/: .clang-format  CMakeLists.txt  CMakePresets.json  DX12-Playground.sln  DX12-Playground.vcxproj  main.cpp  vcpkg.json
DX12-Playground/Engine/: CMakeLists.txt
DX12-Playground/Engine/Include/: Application.h  CommandQueue.h  DX12LibPCH.h  Events.h  Game.h  Helpers.h  KeyCodes.h  Window.h
DX12-Playground/Engine/Include/Camera/: OrbitCamera.h
DX12-Playground/Engine/Include/ECS/: ECS.h  Globals.h  World.h
DX12-Playground/Engine/Include/ECS/Component/: ComponentArray.h  ComponentManager.h  IComponentArray.h
DX12-Playground/Engine/Include/ECS/Components/: CameraComponent.h  DirectionalLightComponent.h  MeshComponent.h  PathFollowerComponent.h  PointLightComponent.h  RigidBodyComponent.h  TagComponent.h  TransformComponent.h
DX12-Playground/Engine/Include/ECS/Entity/: EntityManager.h
DX12-Playground/Engine/Include/ECS/Prefabs/: MeshObjectPrefab.h  PointLightPrefab.h
DX12-Playground/Engine/Include/ECS/System/: System.h  SystemManager.h
DX12-Playground/Engine/Include/ECS/Systems/: CameraSystem.h  FrameContext.h  LightingSystem.h  PathFollowerSystem.h  RenderableSystem.h  TransformSystem.h
DX12-Playground/Engine/Include/Math/: BezierPath.h  CirclePath.h  Path.h
DX12-Playground/Engine/Include/Mesh/: Mesh.h  MeshData.h  MeshRegistry.h  Primitives.h  Vertex.h
DX12-Playground/Engine/Include/UI/: ComponentInspectorRegistry.h  ComponentInspectors.h  InspectorPanel.h  SceneHierarchyPanel.h  StatsPanel.h  UI.h  UILayer.h  UIPanel.h
DX12-Playground/Engine/Shaders/: PixelShader.hlsl  VertexShader.hlsl
DX12-Playground/Engine/Source/: Application.cpp  CommandQueue.cpp  Game.cpp  HighResolutionClock.cpp  Window.cpp
DX12-Playground/Engine/Source/Camera/: OrbitCamera.cpp
DX12-Playground/Engine/Source/ECS/: World.cpp
DX12-Playground/Engine/Source/ECS/Component/: ComponentManager.cpp
DX12-Playground/Engine/Source/ECS/Entity/: ComponentArray.cpp  EntityManager.cpp  IComponentArray.cpp
DX12-Playground/Engine/Source/ECS/Prefabs/: MeshObjectPrefab.cpp  PointLightPrefab.cpp
DX12-Playground/Engine/Source/ECS/System/: SystemManager.cpp
DX12-Playground/Engine/Source/ECS/Systems/: PathFollowerSystem.cpp
DX12-Playground/Engine/Source/Math/: BezierPath.cpp  CirclePath.cpp  Path.cpp
DX12-Playground/Engine/Source/Mesh/: MeshRegistry.cpp  Primitives.cpp
DX12-Playground/Engine/Source/UI/: ComponentInspectorRegistry.cpp  InspectorPanel.cpp  SceneHierarchyPanel.cpp  UILayer.cpp
DX12-Playground/Sample/: CMakeLists.txt
DX12-Playground/Sample/Include/: Sample.h
DX12-Playground/Sample/Shaders/: PixelShader.hlsl  VertexShader.hlsl
DX12-Playground/Sample/Source/: Sample.cpp  main.cpp
DX12-Playground/Tests/: CMakeLists.txt  main.cpp
DX12-Playground/Tests/ECS/: ComponentManagerTests.cpp  EntityManagerTests.cpp  WorldTests.cpp
